# my-data

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  My_Data.py  README.md  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  sparql_examples.md
.github/workflows/: publish.yaml
cache/: README.md
contributing/: index.html
data-access/: index.html
data-ownership/: index.html
docs/: contributing.md  data-access.md  data-ownership.md  getting-started.md  index.md  linked-data.md  list-of-importer-plugins.md  namespace-convention.md  sparql-examples.md
exports/: README.md
getting-started/: index.html
knowledge/: event_spec.ttl  schema_mydata.ttl
linked-data/: index.html
list-of-importer-plugins/: index.html
mydata/: api.py  cli.py  email_data.py  google_events.py  importer.py  mailbox_analyzer.py  namespace.py  utils.py
mydata/parsers/: apple_imessage.py  apple_knowledge.py  apple_photos.py  browser.py  google_activity.py  oura.py  ouraring.py  password_managers.py  telegram.py
mydata/parsers/mbox/: __main__.py  email_data.py  mailbox_analyzer.py  mbox_to_rdf.py
mydata/viewer/: __init__.py  app.py
mydata/viewer/templates/: base.html  node.html  types.html
namespace-convention/: index.html
namespace_convention/: index.html
pages/: 01_Mailbox.py  02_Google_Activity.py
scala-data-importer/: build.sbt
scala-data-importer/src/main/scala/: Main.scala
sparql-examples/: index.html
src/mydata/: email_data.py  mailbox_analyzer.py
