[project]
name = "my-data"
description = "Personal data discovery and analysis"
authors = [
    { name = "Peter Romov", email = "peter@romov.com" }
]
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.10"
keywords = ["personal data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    "pandas",
    "tldextract",
    "scrapy",
    "lxml",
    "python-dateutil",
    "httpx",
]


[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-timestamp"
version_file = "src/mydata/_version.py"
